<resources>
    <string name="app_title">Travelmantics</string>
    <string name="app_name">Travelmantics ALC40</string>
    <string name="action_logout">Sign Out</string>
    <string name="deal_title">Deal Title</string>
    <string name="deal_desc">Deal Desc</string>
    <string name="ghc_price">GHc Price</string>
    <string name="deal_title_h">Deal Title</string>
    <string name="deal_price_h">Deal price</string>
    <string name="deal_description">Deal description</string>
    <string name="save_deal">Save</string>
    <string name="save_notice">Deal Saved Successfully</string>
    <string name="delete_deal_txt">Delete Deal</string>
    <string name="add_deal_txt">Add New Deal</string>
    <string name="edit_deal_txt">Edit Deal</string>
    <string name="add_image">Add Image</string>
    <string name="update_img">Update Image</string>
    <string name="sign_out">Sign Out</string>
    <string name="deal">Deal</string>
</resources>
