<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:padding="3dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_deal_image"
            android:layout_width="0dp"
            android:layout_height="124dp"
            android:layout_weight="3"
            android:layout_margin="3dp"
            android:scaleType="centerCrop"
            android:src="@drawable/generic" />
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="4dp"
            android:paddingEnd="2dp">

            <TextView
                android:id="@+id/tw_deal_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deal_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:maxLines="1"/>

            <TextView
                android:id="@+id/tw_deal_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deal_desc"
                android:textSize="16sp"
                android:ellipsize="end"
                android:maxLines="6"/>
            
        </LinearLayout>

        <TextView
            android:id="@+id/tw_deal_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/capsule"
            android:gravity="center"
            android:text="@string/ghc_price"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.cardview.widget.CardView>