<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.AddEditActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/deal_img"
        android:layout_width="323dp"
        android:layout_height="219dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/generic" />


    <EditText
        android:id="@+id/ev_dealTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/deal_title_h"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deal_img" />

    <EditText
        android:id="@+id/ev_dealPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/deal_price_h"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/ev_dealTitle"
        app:layout_constraintStart_toStartOf="@+id/ev_dealTitle"
        app:layout_constraintTop_toBottomOf="@+id/ev_dealTitle" />

    <EditText
        android:id="@+id/ev_dealDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/deal_description"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/ev_dealPrice"
        app:layout_constraintStart_toStartOf="@+id/ev_dealPrice"
        app:layout_constraintTop_toBottomOf="@+id/ev_dealPrice" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="68dp"
        android:background="@color/colorGreen"
        android:gravity="center"
        android:text="@string/save_deal"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/btn_txt_size"
        android:textStyle="normal"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ev_dealDesc" />


    <Button
        android:id="@+id/upload_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorAdd"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/add_image"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toStartOf="@+id/save_btn"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ev_dealDesc" />

    <ProgressBar
        android:id="@+id/im_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:background="@drawable/capsule"
        android:indeterminate="true"
        android:max="100"
        android:padding="2dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/deal_img"
        app:layout_constraintEnd_toEndOf="@+id/deal_img"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/deal_img"
        app:layout_constraintTop_toTopOf="@+id/deal_img"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/im_progressBar"
        app:layout_constraintEnd_toEndOf="@+id/im_progressBar"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/im_progressBar"
        app:layout_constraintTop_toTopOf="@+id/im_progressBar" />


</androidx.constraintlayout.widget.ConstraintLayout>